added if/else statements

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <title>Digital Crafts Frontend Project</title>
 </head>
 <body>
-
+    
 <input type="text" id="cityNameTextBox">
 <button id="searchButton">Search</button>
 <ul id=weatherUL></ul>
-
+<ul id="latLongUL"></ul>
 
     <script src="weatherapp.js"></script>
 </body>
