added placeholder and required attributes to city textbox

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-<input type="text" id="cityNameTextBox">
+<input type="text" id="cityNameTextBox" placeholder="City" required>
 <button id="searchButton">Search</button>
 <ul id=weatherUL></ul>
 <ul id="latLongUL"></ul>
