--- a/index.html
+++ b/index.html
@@ -1,20 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="styles.css">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="styles.css" />
     <title>Digital Crafts Frontend Project</title>
-</head>
-<body>
-<div class="searchMenu"> 
-<input type="text" id="cityNameTextBox" placeholder="City" required>
-<button id="searchButton">Search</button>
-</div> 
-<ul id=weatherUL></ul>
-<ul id="latLongUL"></ul>
+  </head>
+
+  <body>
+    <header
+      class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-body border-bottom shadow-sm"
+    >
+      <p class="h5 my-0 me-md-auto fw-normal">
+        Digital Crafts Frontend Project
+      </p>
+      <br />
+      <a class="btn btn-outline-primary" href="#">Sign Up</a>
+    </header>
+
+    <main class="container">
+      <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+        <h3 class="display-6">
+          Find What to Wear Based on the Weather in Your Location
+        </h3>
+        <div class="searchMenu">
+          <input type="text" id="cityNameTextBox" placeholder="City" required />
+          <input type="text" id="stateNameTextBox" placeholder="State" />
+          <button type="button" class="btn btn-outline-primary" id="searchButton">Search</button>
+        </div>
+      </div>
+
+      <div class="row row-cols-1 row-cols-md-2 mb-3 text-center">
+        <div class="col">
+          <div class="card mb-4 shadow-sm">
+            <div class="card-header">
+              <h4 class="my-0 fw-normal">Today's Forecast</h4>
+            </div>
+            <div class="card-body">
+              <h1 class="card-title pricing-card-title">
+                <small class="text-muted"></small>
+              </h1>
+              <ul class="list-unstyled mt-3 mb-4" id="weatherUL"></ul>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card mb-4 shadow-sm">
+            <div class="card-header">
+              <h4 class="my-0 fw-normal">Tomorrow's Forecast</h4>
+            </div>
+            <div class="card-body">
+              <h1 class="card-title pricing-card-title">
+                <small class="text-muted"></small>
+              </h1>
+              <ul class="list-unstyled mt-3 mb-4" id="weatherUL">
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
 
     <script src="weatherapp.js"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
