Date and Time are separated

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="col">
           <div class="card mb-4 shadow-sm">
             <div class="card-header">
-              <h4 class="my-0 fw-normal">Today's Forecast</h4>
+              <h4 class="my-0 fw-normal" id="dateToday">Today's Forecast</h4>
             </div>
             <div class="card-body">
               <h1 class="card-title pricing-card-title">
