added element for tomorrows forecast

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <h1 class="card-title pricing-card-title">
                 <small class="text-muted"></small>
               </h1>
-              <ul class="list-unstyled mt-3 mb-4" id="weatherUL"></ul>
+              <ul class="list-unstyled mt-3 mb-4" id="todaysWeatherUL"></ul>
             </div>
           </div>
         </div>
@@ -60,7 +60,7 @@
               <h1 class="card-title pricing-card-title">
                 <small class="text-muted"></small>
               </h1>
-              <ul class="list-unstyled mt-3 mb-4" id="weatherUL">
+              <ul class="list-unstyled mt-3 mb-4" id="tomorrowsWeatherUL">
               </ul>
             </div>
           </div>
