--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </head>
 
   <body>
+    <div class="background">
     <header
       class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-body border-bottom shadow-sm"
     >
@@ -67,7 +68,7 @@
         </div>
       </div>
     </main>
-
+  </div>
     <script src="weatherapp.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
