--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-body border-bottom shadow-sm"
     >
       <p class="h5 my-0 me-md-auto fw-normal">
-        Digital Crafts Frontend Project
+        <div class="title-wear"><img id="WEAR" src="./clothes/letter-ws.png" alt=""><img id="WEAR" src="./clothes/letter-es.png" alt=""><img id="WEAR" src="./clothes/letter-as.png" alt=""><span class="title-the">T  H  E</span><img id="WEAR" src="./clothes/letter-r.png" alt=""> </div>
       </p>
       <br />
       <a class="btn btn-outline-primary" href="#">Sign Up</a>
@@ -36,6 +36,8 @@
           <button type="button" class="btn btn-outline-primary" id="searchButton">Search</button>
         </div>
       </div>
+
+      <img src="" alt="">
 
       <div class="row row-cols-1 row-cols-md-2 mb-3 text-center">
         <div class="col">
