--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
   </head>
 
   <body>
-    <div class="background">
     <header
       class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-body border-bottom shadow-sm"
     >
@@ -25,7 +24,7 @@
       <br />
       <a class="btn btn-outline-primary" href="#">Sign Up</a>
     </header>
-
+    <div class="background">
     <main class="container">
       <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
         <h3 class="display-6">
@@ -34,7 +33,8 @@
         <div class="searchMenu">
           <input type="text" id="cityNameTextBox" placeholder="City" required />
           <input type="text" id="stateNameTextBox" placeholder="State"/>
-          <button type="button" class="btn btn-outline-primary" id="searchButton">Search</button>
+          <br>
+          <button type="button" class="btn btn-light" id="searchButton">Search</button>
         </div>
       </div>
 
