--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 
   <body>
     <header
-      class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-body border-bottom shadow-sm"
-    >
+      class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-body border-bottom shadow-sm">
       <p class="h5 my-0 me-md-auto fw-normal">
         <div class="title-wear"><img id="WEAR" src="./clothes/letter-ws.png" alt=""><img id="WEAR" src="./clothes/letter-es.png" alt=""><img id="WEAR" src="./clothes/letter-as.png" alt=""><span class="title-the">T  H  E</span><img id="WEAR" src="./clothes/letter-r.png" alt=""> </div>
       </p>
@@ -28,8 +27,7 @@
     <main class="container">
       <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
         <h3 class="display-6">
-          DON'T KNOW WHAT TO WEAR TODAY?
-    
+          Find Out What to Wear Based on the Weather in Your Location
         </h3>
         <div class="searchMenu">
           <input type="text" id="cityNameTextBox" placeholder="City" required />
