--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <div class="background">
     <main class="container">
       <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-        <h3 class="display-6">
-          Find Out What to Wear Based on the Weather in Your Location
+        <h3 class="display-6" style="font-size: 30px; font-weight: 500;">
+          - Find out what to wear based on the Weather -
         </h3>
         <div class="searchMenu">
           <input type="text" id="cityNameTextBox" placeholder="City" required />
