fixed margin and made header mobile responsive

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main class="container">
       <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
         <h3 class="display-6" style="font-size: 30px; font-weight: 500;">
-          - Find out what to wear based on the Weather -
+          Find out what to wear based on the weather
         </h3>
         <div class="searchMenu">
           <input type="text" id="cityNameTextBox" placeholder="City" required />
