--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>Digital Crafts Frontend Project</title>
+    <title>WeatherWear</title>
   </head>
 
   <body>
     <header
       class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-body border-bottom shadow-sm">
-      <p class="h5 my-0 me-md-auto fw-normal">
-        <div class="title-wear"><img id="WEAR" src="./clothes/letter-ws.png" alt=""><img id="WEAR" src="./clothes/letter-es.png" alt=""><img id="WEAR" src="./clothes/letter-as.png" alt=""><span class="title-the">T  H  E</span><img id="WEAR" src="./clothes/letter-r.png" alt=""> </div>
+      <p class="h5 my-0 me-md-auto fw-normal gif">
+        <div class="title-wear" id="title-wear">
+          <img class="title-image" src="./Images/Logo.png" alt="">
+        </div>
       </p>
       <br />
       
